make category to upload an image and delete category with all of its children.
